[gd_scene load_steps=5 format=2]

[ext_resource path="res://clocks/ClocksDisplay.gd" type="Script" id=1]
[ext_resource path="res://clocks/Clock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shared/theme/GameTheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 25.0
content_margin_right = 25.0
content_margin_top = 25.0
content_margin_bottom = 25.0
bg_color = Color( 0, 0.027451, 0.211765, 0.890196 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 1

[node name="ClocksDisplay" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
clock_scene = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 750, 0 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 836.0
margin_bottom = 70.0

[node name="Settings" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 811.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Settings"]
margin_right = 80.0
margin_bottom = 41.0
size_flags_vertical = 3
text = "Clock Type:"
valign = 2

[node name="ClockSort" type="OptionButton" parent="ScrollContainer/VBoxContainer/Settings"]
margin_left = 84.0
margin_top = 14.0
margin_right = 158.0
margin_bottom = 41.0
size_flags_vertical = 8
text = "Item 0"

[node name="ColorRect2" type="ColorRect" parent="ScrollContainer/VBoxContainer/Settings"]
margin_left = 162.0
margin_right = 187.0
margin_bottom = 41.0
rect_min_size = Vector2( 25, 0 )
color = Color( 1, 1, 1, 0 )

[node name="ClockSizeContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/Settings"]
margin_left = 191.0
margin_right = 391.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Settings/ClockSizeContainer"]
margin_right = 200.0
margin_bottom = 21.0
text = "Clock Size"
align = 1

[node name="ScaleSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/Settings/ClockSizeContainer"]
margin_top = 25.0
margin_right = 200.0
margin_bottom = 41.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
value = 50.0
scrollable = false
tick_count = 5
ticks_on_borders = true

[node name="ColorRect3" type="ColorRect" parent="ScrollContainer/VBoxContainer/Settings"]
margin_left = 395.0
margin_right = 420.0
margin_bottom = 41.0
rect_min_size = Vector2( 25, 0 )
color = Color( 1, 1, 1, 0 )

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/Settings"]
margin_left = 424.0
margin_right = 493.0
margin_bottom = 41.0
size_flags_vertical = 3
text = "Columns: "
valign = 2

[node name="GridColumnOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/Settings"]
margin_left = 497.0
margin_top = 14.0
margin_right = 667.0
margin_bottom = 41.0
size_flags_vertical = 8
text = "Number of Columns"
items = [ "Number of Columns", null, true, 0, null, "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null, "5", null, false, 5, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ScrollContainer/VBoxContainer/Settings"]
margin_left = 671.0
margin_right = 696.0
margin_bottom = 41.0
rect_min_size = Vector2( 25, 0 )
color = Color( 1, 1, 1, 0 )

[node name="AddClock" type="Button" parent="ScrollContainer/VBoxContainer/Settings"]
margin_left = 700.0
margin_top = 14.0
margin_right = 811.0
margin_bottom = 41.0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "+ Add Clock +"

[node name="Clocks" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 811.0
margin_bottom = 45.0
theme = ExtResource( 3 )
columns = 2

[connection signal="item_selected" from="ScrollContainer/VBoxContainer/Settings/ClockSort" to="ScrollContainer" method="_on_ClockSort_item_selected"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/Settings/ClockSizeContainer/ScaleSlider" to="ScrollContainer" method="_on_ScaleSlider_value_changed"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/Settings/GridColumnOption" to="ScrollContainer" method="_on_GridColumnOption_item_selected"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Settings/AddClock" to="." method="_on_AddClock_pressed"]
